# OctoCAT_Supply

./: CONTRIBUTING.md  Makefile  README.md
.github/: copilot-instructions.md
.github/agents/: api-specialist.agent.md  bdd-specialist.agent.md  tdd-green.agent.md  tdd-planner.agent.md  tdd-red.agent.md
.github/instructions/: api.instructions.md  frontend.instructions.md
.github/prompts/: cart-multi-agent.prompt.md  check-dry-violations.prompt.md  demo-cart-page.prompt.md  demo-unit-test-coverage.prompt.md  handoff-to-copilot-coding-agent.prompt.md  model-compare.prompt.md
.github/workflows/: dependabot-pr-copilot-cli-check.yml
api/: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
api/src/: init_db.py  main.py  seed_data.py
api/src/db/: config.py  connection.py  migrate.py  seed.py
api/src/models/: branch.py  delivery.py  headquarters.py  order.py  order_detail.py  order_detail_delivery.py  product.py  supplier.py
api/src/repositories/: base_repo.py  branches_repo.py  deliveries_repo.py  headquarters_repo.py  order_detail_deliveries_repo.py  order_details_repo.py  orders_repo.py  products_repo.py  suppliers_repo.py
api/src/routes/: branch.py  delivery.py  headquarters.py  order.py  order_detail.py  order_detail_delivery.py  product.py  supplier.py
api/src/utils/: errors.py  sql.py
api/tests/: conftest.py  test_products.py  test_suppliers.py
docs/: architecture.md  build.md
frontend/: README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts  vitest.config.ts
frontend/src/: App.vue  env.d.ts  main.ts  (+1 more)
(+13 files in other folders)
