[project]
name = "octocat-supply-api"
version = "1.0.0"
description = "OctoCAT Supply Chain Management API - Python/FastAPI"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "pydantic>=2.10.0",
  "pydantic-settings>=2.6.0",
  "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=6.0.0",
  "httpx>=0.27.0",
  "ruff>=0.8.0",
]

[project.scripts]
api-init-db = "src.init_db:main"
api-seed = "src.seed_data:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "C90"]
ignore = [
  "E501", # Line too long (already ignored)
  "F401", # Unused import (intentional for CodeQL)
  "F507", # Wrong number of format string placeholders (intentional for CodeQL)
  "F523", # Unused format arguments (intentional for CodeQL)
  "F631", # Assert tuple is always true (intentional for CodeQL)
  "F841", # Local variable assigned but never used (intentional for CodeQL)
  "F901", # raise NotImplemented (intentional for CodeQL)
  "E711", # Comparison to None with == (intentional for CodeQL)
  "B020", # Loop variable overrides iterable (intentional for CodeQL)
  "I001", # Import block unsorted (intentional for CodeQL)
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --cov=src --cov-report=term-missing --cov-report=html"

[tool.hatch.build.targets.wheel]
packages = ["src"]
